# newspaper4k

./: .codespell-dictionary.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LANGUAGES.md  MANIFEST.in  README.md  download_corpora.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  questions---help---documentation.md  website---newssite-not-parsing-correctly.md
.github/workflows/: pipeline.yml  pylint.yml  python-publish.yml
docs/: conf.py  index.rst  requirements.in  requirements.txt
docs/_themes/: README.rst
docs/user_guide/: advanced.rst  api_reference.rst  cli_reference.rst  contributors.rst  examples.rst  faq.rst  installation.rst  known_issues.rst  known_newssites.rst  known_sites_not_working.csv  languages.rst  nlp_keywords_summary.rst  quickstart.rst
evaluation/: evaluate.py  evaluate_all  helper.py
newspaper/: __init__.py  __main__.py  api.py  article.py  cleaners.py  cli.py  configuration.py  exceptions.py  extractors.py  google_news.py  images.py  languages.py  mthreading.py  network.py  network_hooks.py  nlp.py  outputformatters.py  parsers.py  settings.py  source.py  text.py  urls.py  utils.py  version.py
newspaper/_pyinstaller/: __init__.py  hook-newspaper.py
newspaper/extractors/: __init__.py  articlebody_extractor.py  author_extractor.py  authors_extractor.py  authors_extractor0.py  categories_extractor.py  content_extractor.py  defines.py  image_extractor.py  metadata_extractor.py  pubdate_extractor.py  tags_extractor.py  title_extractor.py  videos_extractor.py
newspaper/language/: zh.py
newspaper/languages/: __init__.py  ar.py  bn.py  hi.py  ja.py  ko.py  my.py  ne.py  np.py  ta.py  th.py  zh.py
newspaper/resources/misc/: popular_sources.txt  stopwords-nlp-en.txt
newspaper/resources/text/: stopwords-af.txt  stopwords-as.txt  stopwords-br.txt  stopwords-cs.txt  stopwords-cy.txt  stopwords-en.txt  stopwords-eo.txt  stopwords-gl.txt  stopwords-gu.txt  stopwords-ha.txt  stopwords-is.txt  stopwords-kn.txt  stopwords-ku.txt  stopwords-lb.txt  stopwords-lv.txt  stopwords-mn.txt  stopwords-mr.txt  stopwords-ms.txt  stopwords-np.txt  stopwords-pa.txt  stopwords-ps.txt  stopwords-rn.txt  stopwords-rw.txt  stopwords-si.txt  stopwords-sk.txt  stopwords-so.txt  stopwords-st.txt  stopwords-tl.txt  stopwords-tt.txt  stopwords-ur.txt  stopwords-uz.txt  stopwords-yo.txt  stopwords-zu.txt
newspaper/utils/: __init__.py  classes.py
newspaper/videos/: extractors.py  videos.py
stubs/: jieba.pyi  pythainlp.pyi  tinysegmenter.pyi
stubs/cloudscraper/: __init__.pyi
stubs/gnews/: __init__.pyi  gnews.pyi
stubs/gnews/utils/: constants.pyi  utils.pyi
stubs/indicnlp/tokenize/: indic_tokenize.pyi
stubs/nltk/: __init__.pyi  data.pyi  tokenize.pyi
tests/: benchmarks.py  conftest.py  create_test_data.py  create_test_data_duplicates  get_many_articles.py  smoke_test.py  test_article.py  test_cleaners.py  test_cli.py  test_configuration.py  test_cookies.py  test_languages.py  test_misc.py  test_nlp.py  test_parsing.py  test_pdf.py  test_requests.py  test_smoke.py  test_source.py  unit_tests.py
tests/data/: test_prepare_urls.txt  test_urls_pubdate.txt
tests/data/html/: 247wallst.com1.html  247wallst.com2.html  about.com1.html  about.com2.html  adoption.com1.html  al.com1.html  al.com2.html  apartmenttherapy.com1.html  apartmenttherapy.com2.html  arabic_article.html  architecturaldigest.com1.html  architecturaldigest.com2.html  article_with_br.html  article_with_divs.html  autoindustria.html  avclub.com1.html  avclub.com2.html  backstage.com1.html  backstage.com2.html  bhg.com1.html  bhg.com2.html  bloomberg.com1.html  bostonherald.com1.html  bostonherald.com2.html  businessinsider.com1.html  businessinsider.com2.html  businessweek.com1.html  businessweek.com2.html  chinese_article.html  chinese_article_001.html  chinese_article_002.html  cleveland.com1.html  cleveland.com2.html  cnn_001.html  cnn_002.html  cnn_article.html  cnn_main_site.html  cnn_test_nlp.html  cntraveler.com1.html  cntraveler.com2.html  (+125 more)
tests/data/metadata/: arabic_article.json  article_with_br.json  article_with_divs.json  chinese_article_001.json  chinese_article_002.json  cleveland.com1.json  cnn_001.json  cnn_002.json  cnn_article.json  cnn_test_nlp.json  fox13now_001.json  japanese_article.json  japanese_article2.json  spanish_article.json  thai_article.json  time_001.json  video_article_01.json  video_article_02.json  wired_001.json  yna_co_kr.json
tests/data/text/: about.com1.txt  about.com2.txt  avclub.com1.txt  backstage.com2.txt  bhg.com1.txt  bostonherald.com2.txt  businessinsider.com2.txt  businessweek.com2.txt  cleveland.com1.txt  cleveland.com2.txt  cntraveler.com1.txt  cntraveler.com2.txt  dailycaller.com1.txt  dailycaller.com2.txt  dallasnews.com2.txt  elle.com2.txt  flavorwire.com1.txt  flavorwire.com2.txt  globalnews.ca1.txt  globalnews.ca2.txt  gq.com1.txt  gq.com2.txt  graziadaily.co.uk1.txt  graziadaily.co.uk2.txt  huffingtonpost.com1.txt  lifebuzz.com2.txt  livescience.com1.txt  livescience.com2.txt  mlive.com1.txt  mlive.com2.txt  nypost.com2.txt  ok.co.uk2.txt  oregonlive.com2.txt  parsely.com2.txt  pewresearch.org2.txt  recipe.com2.txt  reuters.com1.txt  reuters.com2.txt  reuters.com3.txt  self.com1.txt  (+24 more)
tests/data/txt/: 247wallst.com1.txt  247wallst.com2.txt  adoption.com1.txt  (+89 more)
tests/e2e/: conftest.py  test_article.py  test_source.py
tests/evaluation/: evaluate.py  helper.py
tests/helpers/: create_test_data.py  create_test_data_duplicates  get_many_articles.py
tests/integration/: conftest.py  test_article.py  test_cli.py  test_languages.py  test_misc.py  test_pdf.py  test_requests.py  test_source.py
tests/unit/: conftest.py  test_article.py  test_category_extractor.py  test_cleaners.py  test_cli.py  test_configuration.py  test_google_news.py  test_languages.py  test_misc.py  test_network.py  test_nlp.py  test_parsing.py  test_pyinstaller_hook.py  test_requests.py  test_source.py  test_urls.py
(+1 files in other folders)
