[project]
name = "newspaper4k"
version = "0.9.4"
requires-python = ">=3.9"
description = "Simplified python article discovery & extraction."
authors = [{ name = "Andrei Paraschiv", email = "andrei@thephpfactory.com" }]
license = "MIT"
readme = "README.md"
packages = [{ include = "newspaper" }]
keywords = ["nlp", "scraping", "newspaper", "article", "curation", "extraction"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Natural Language :: English",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
]
homepage = "https://github.com/AndyTheFactory/newspaper4k"
repository = "https://github.com/AndyTheFactory/newspaper4k"
documentation = "https://newspaper4k.readthedocs.io/en/latest/"

dependencies = [
  "beautifulsoup4 >=4.9.3",
  "Pillow >=4.0.0",
  "PyYAML >=5.1",
  "lxml[html_clean] >=5.2.0",
  "nltk >=3.6.6",
  "requests >=2.26.0",
  "feedparser >=6.0.0",
  "tldextract >=2.0.1",
  "python-dateutil >=2.6.1",
  "typing-extensions >=4.10.0",
]

[tool.poetry]
package-mode = true
packages = [{include = "*", from="newspaper"}]

[project.optional-dependencies]
zh = ["jieba >=0.42.1"]
th = ["pythainlp >=2.3.2"]
ja = ["tinysegmenter >=0.4"]
bn = ["indic-nlp-library >=0.90"]
hi = ["indic-nlp-library >=0.90"]
np = ["indic-nlp-library >=0.90"]
ta = ["indic-nlp-library >=0.90"]
cloudflare = ["cloudscraper >=1.2.0"]
gnews = ["gnews >=0.3.6"]
numpy = [
  "numpy >=1.25; python_version >= '3.11'",
  "numpy >=1.24; python_version >= '3.9' and python_version < '3.11'",
]

all = [
  "tinysegmenter",
  "pythainlp",
  "jieba",
  "indic-nlp-library",
  "cloudscraper",
  "gnews",
]

[tool.poetry.group.dev.dependencies]
pytest-cov = { version = ">=6.0.0", python = "^3.9" }
pre-commit = { version = ">=4.0.0", python = "^3.9" }
ruff = { version = ">=0.9.0", python = "^3.9" }
codespell = { version = ">=2.4.0 ", python = "^3.9" }
pytest = { version = ">=8.0.0", python = "^3.9" }
mypy = { version = "^1.8.0", python = "^3.9" }
lxml-stubs = { version = "^0.5.1", python = "^3.9" }
types-pillow = { version = "^10.2.0.20240822", python = "^3.9" }
types-python-dateutil = { version = ">=2.9.0", python = "^3.9" }
types-requests = ">=2.30.1"
types-beautifulsoup4 = { version = "^4.12.0.20250204", python = "^3.9" }
virtualenv = { version = ">=20.29.0" }

[tool.poetry.group.test.dependencies]
pytest = { version = ">=8.0.0", python = "^3.9" }
pytest-cov = { version = ">=6.0.0", python = "^3.9" }
coverage = { version = ">=7.6.9", python = "^3.9" }


[tool.poetry.group.docs.dependencies]
python = "^3.10"
sphinx = [{ version = ">=8.0.0", python = "^3.10" }, { version = ">=7.0.0", python = "^3.9.0" }]
sphinx-argparse = { version = "*", python = "^3.9" }
sphinx-rtd-theme = { version = ">=3.0.0", python = "^3.9" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
