[project]
name = "newspaper4k"
requires-python = ">=3.9"
description = "Simplified python article discovery & extraction."
authors = [{ name = "Andrei Paraschiv", email = "andrei@thephpfactory.com" }]
license = "MIT"
packages = [{ include = "newspaper" }]
keywords = ["nlp", "scraping", "newspaper", "article", "curation", "extraction"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Natural Language :: English",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
]
homepage = "https://github.com/AndyTheFactory/newspaper4k"
repository = "https://github.com/AndyTheFactory/newspaper4k"
documentation = "https://newspaper4k.readthedocs.io/en/latest/"

dynamic = ['version', 'readme']

dependencies = [
  "beautifulsoup4 >=4.9.3",
  "Pillow >=4.0.0",
  "PyYAML >=5.1",
  "lxml[html_clean] >=5.2.0",
  "nltk >=3.6.6",
  "requests >=2.26.0",
  "feedparser >=6.0.0",
  "tldextract >=2.0.1",
  "python-dateutil >=2.6.1",
  "typing-extensions >=4.10.0",
  "brotli >= 1.0.9",
]

[project.optional-dependencies]
zh = ["jieba >=0.42.1"]
th = ["pythainlp >=2.3.2"]
ja = ["tinysegmenter >=0.4"]
bn = ["indic-nlp-library >=0.90"]
hi = ["indic-nlp-library >=0.90"]
np = ["indic-nlp-library >=0.90"]
ta = ["indic-nlp-library >=0.90"]
cloudflare = ["cloudscraper >=1.2.0"]
gnews = ["gnews >=0.3.6"]
numpy = [
  "numpy >=1.25; python_version >= '3.11'",
  "numpy >=1.24; python_version >= '3.9' and python_version < '3.11'",
]

all = [
  "tinysegmenter >= 0.4",
  "pythainlp >= 2.3.2",
  "jieba >= 0.42.1",
  "indic-nlp-library >= 0.90",
  "cloudscraper >= 1.2.0",
  "gnews >= 0.3.6",
]
[dependency-groups]
dev= [
  "pytest >=8.0.0",
  "pytest-cov >=6.0.0",
  "pylint >=3.3.0",
  "coverage >=7.6.9",
  "pre-commit >=4.0.0",
  "ruff >=0.9.0",
  "codespell >=2.4.0",
  "mypy >=1.8.0",
  "lxml-stubs >=0.5.1",
  "types-pillow >=10.2.0.20240822",
  "types-python-dateutil >=2.9.0",
  "types-requests >=2.30.1",
  "types-beautifulsoup4 >=4.12.0.20250204",
  "virtualenv >=20.29.0",
]

test = [
  "mypy >=1.8.0",
  "pylint >=3.3.0",
  "pytest >=8.0.0",
  "pytest-cov >=6.0.0",
  "coverage >=7.6.9",
]

docs = [
  "sphinx >=8.0.0; python_version >= '3.10'",
  "sphinx >=7.0.0; python_version < '3.10'",
  "sphinx-argparse",
  "sphinx-rtd-theme >=3.0.0",
]

[tool.uv]
default-groups = ['dev']

[tool.ruff]
line-length = 120
target-version = 'py39'
extend-exclude = ['newspaper/resources', 'tests/localdebug/']

[tool.ruff.lint]
select = [
    'F',      # Pyflakes
    'E',      # pycodestyle (Error)
    'I',      # isort
    'D',      # pydocstyle
    'UP',     # pyupgrade
    'YTT',    # flake8-2020
    'B',      # flake8-bugbear
    'T10',    # flake8-debugger
    'T20',    # flake8-print
    'C4',     # flake8-comprehensions
    'PYI006', # flake8-pyi
    'PYI062', # flake8-pyi
    'PYI063', # flake8-pyi
    'PYI066', # flake8-pyi
]
ignore = ['B028', 'D202', 'D415', 'D212', 'D205']
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
isort = { known-first-party = ['newspaper', 'tests'] }
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.pytest.ini_options]
minversion = "7.0"

[build-system]
requires = ['hatchling', 'hatch-fancy-pypi-readme>=22.5.0']
build-backend = 'hatchling.build'


[tool.hatch.version]
path = 'newspaper/version.py'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["newspaper"]

[tool.hatch.build.targets.sdist]
# limit which files are included in the sdist (.tar.gz) asset,
# see https://github.com/pydantic/pydantic/pull/4542
include = [
    '/README.md',
    '/CHANGELOG.md',
    '/LICENSE',
    '/newspaper',
    '/tests',
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'
# construct the PyPI readme from README.md and CHANGELOG.md
fragments = [
    {path = 'README.md'},
    {text = "\n## Changelog\n\n"},
    {path = 'CHANGELOG.md', pattern = '(.+?)<!-- package description limit -->'},
    {text = "\n... see [here](https://github.com/AndyTheFactory/newspaper4k/blob/master/CHANGELOG.md) for earlier changes.\n"},
]
